# interbotix_ros_manipulators

./: .gitignore  CITATION.cff  LICENSE  README.md
interbotix_ros_uxarms/examples/interbotix_uxarm_moveit_interface/: CMakeLists.txt  README.md  package.xml
interbotix_ros_uxarms/interbotix_uxarm_control/: CMakeLists.txt  README.md  package.xml
interbotix_ros_uxarms/interbotix_uxarm_control/config/: uxarm5.yaml  uxarm6.yaml  uxarm7.yaml
interbotix_ros_uxarms/interbotix_uxarm_control/launch/: uxarm_control.launch
interbotix_ros_uxarms/interbotix_uxarm_control/src/: gripper_pub.cpp
interbotix_ros_uxarms/interbotix_uxarm_gazebo/: CMakeLists.txt  README.md  package.xml
interbotix_ros_uxarms/interbotix_uxarm_gazebo/config/: uxarm_configs.gazebo  uxarm_gripper_configs.gazebo
interbotix_ros_uxarms/interbotix_uxarm_gazebo/launch/: uxarm_gazebo.launch
interbotix_ros_uxarms/interbotix_uxarm_gazebo/worlds/: uxarm_gazebo.world
interbotix_ros_uxarms/interbotix_uxarm_ros_control/: CMakeLists.txt  README.md  package.xml
interbotix_ros_uxarms/interbotix_uxarm_ros_control/config/: 5dof_controllers.yaml  6dof_controllers.yaml  7dof_controllers.yaml  hardware.yaml
interbotix_ros_uxarms/interbotix_uxarm_ros_control/launch/: uxarm_ros_control.launch
interbotix_ros_xsarms/examples/interbotix_ros_xsarms_examples/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/examples/interbotix_xsarm_diagnostic_tool/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/examples/interbotix_xsarm_dual/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/examples/interbotix_xsarm_dual_joy/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/examples/interbotix_xsarm_gravity_compensation/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/examples/interbotix_xsarm_joy/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/examples/interbotix_xsarm_moveit_interface/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/examples/interbotix_xsarm_pid/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_ros_xsarms/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_xsarm_control/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_xsarm_control/config/: aloha_vx300s.yaml  aloha_wx250s.yaml  calibrate.yaml  mobile_px100.yaml  mobile_wx200.yaml  mobile_wx250s.yaml  px100.yaml  px150.yaml  rx150.yaml  rx200.yaml  vx250.yaml  vx300.yaml  vx300s.yaml  wx200.yaml  wx250.yaml  wx250s.yaml
interbotix_ros_xsarms/interbotix_xsarm_control/demos/: README.md  bartender.py  ee_cartesian_trajectory.py  ee_pose_components.py  ee_pose_matrix_control.py  gripper_control.py  joint_current_control.py  joint_position_control.py  joint_pwm_control.py  joint_trajectory_control.py
interbotix_ros_xsarms/interbotix_xsarm_control/launch/: xsarm_control.launch  xsarm_control.launch.py
interbotix_ros_xsarms/interbotix_xsarm_descriptions/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_xsarm_descriptions/launch/: remote_view.launch  remote_view.launch.py  xsarm_description.launch  xsarm_description.launch.py
interbotix_ros_xsarms/interbotix_xsarm_descriptions/rviz/: xsarm_description.rviz
interbotix_ros_xsarms/interbotix_xsarm_descriptions/urdf/: aloha_vx300s.urdf.xacro  aloha_wx250s.urdf.xacro  ar_tag.urdf.xacro  control.urdf.xacro  gazebo_configs.urdf.xacro  interbotix_arm.urdf.xacro  mobile_px100.urdf.xacro  mobile_wx200.urdf.xacro  mobile_wx250s.urdf.xacro  px100.urdf.xacro  px150.urdf.xacro  rx150.urdf.xacro  rx200.urdf.xacro  vx250.urdf.xacro  vx300.urdf.xacro  vx300s.urdf.xacro  wx200.urdf.xacro  wx250.urdf.xacro  wx250s.urdf.xacro
interbotix_ros_xsarms/interbotix_xsarm_gazebo/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_xsarm_gazebo/config/: interbotix_texture.gazebo
interbotix_ros_xsarms/interbotix_xsarm_gazebo/launch/: xsarm_gazebo.launch
interbotix_ros_xsarms/interbotix_xsarm_gazebo/worlds/: xsarm_gazebo.world
interbotix_ros_xsarms/interbotix_xsarm_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_xsarm_moveit/config/: kinematics.yaml  modes.yaml  ompl_planning.yaml  sensors_3d.yaml
interbotix_ros_xsarms/interbotix_xsarm_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  xsarm_moveit.launch  xsarm_moveit.launch.py  xsarm_moveit_controller_manager.launch.xml
interbotix_ros_xsarms/interbotix_xsarm_moveit/rviz/: xsarm_moveit.rviz
interbotix_ros_xsarms/interbotix_xsarm_perception/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_xsarm_perception/config/: filter_params.yaml  static_transforms.yaml
interbotix_ros_xsarms/interbotix_xsarm_perception/demos/: block_organizer.py  chessboard_cleanup.py  color_sorter.py  pick_place.py  size_organizer.py
interbotix_ros_xsarms/interbotix_xsarm_perception/launch/: xsarm_perception.launch  xsarm_perception.launch.py
interbotix_ros_xsarms/interbotix_xsarm_perception/rviz/: xsarm_perception.rviz
interbotix_ros_xsarms/interbotix_xsarm_perception/scripts/: block_organizer.py  chessboard_cleanup.py  color_sorter.py  pick_place.py  size_organizer.py
interbotix_ros_xsarms/interbotix_xsarm_ros_control/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xsarms/interbotix_xsarm_ros_control/config/: 4dof_controllers.yaml  5dof_controllers.yaml  6dof_controllers.yaml  hardware.yaml
interbotix_ros_xsarms/interbotix_xsarm_ros_control/launch/: xsarm_ros_control.launch  xsarm_ros_control.launch.py
interbotix_ros_xsarms/interbotix_xsarm_sim/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xscobots/interbotix_xscobot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+338 files in other folders)
