<?xml version="1.0"?>
<package format="2">
  <name>interbotix_ros_xsarms</name>
  <version>0.0.0</version>
  <description>The interbotix_ros_xsarms metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>interbotix_xs_sdk</depend>
  <!-- <depend>interbotix_xs_modules</depend> -->
  <depend>interbotix_xsarm_control</depend>
  <depend>interbotix_xsarm_descriptions</depend>
  <!-- <depend>interbotix_xsarm_gazebo</depend> -->
  <!-- <depend>interbotix_xsarm_moveit</depend> -->
  <!-- <depend>interbotix_xsarm_perception</depend> -->
  <!-- <depend>interbotix_xsarm_ros_control</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
