<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_ros_xsarms_examples</name>
  <version>0.0.0</version>
  <description>The interbotix_ros_xsarms_examples metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>interbotix_ros_xsarms</exec_depend>
  <!-- <exec_depend>interbotix_xsarm_diagnostic_tool</exec_depend> -->
  <!-- <exec_depend>interbotix_xsarm_dual</exec_depend> -->
  <!-- <exec_depend>interbotix_xsarm_dual_joy</exec_depend> -->
  <exec_depend>interbotix_xsarm_joy</exec_depend>
  <exec_depend>interbotix_xsarm_moveit_interface</exec_depend>
  <!-- <exec_depend>interbotix_xsarm_pid</exec_depend> -->
  <!-- <exec_depend>interbotix_xsarm_puppet</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
