<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_xsarm_gravity_compensation</name>
  <version>0.0.0</version>
  <description>The demo of the interbotix_gravity_compensation package on xsarm</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD-3-Clause</license>
  <author email="trsupport@trossenrobotics.com">Shiming Liang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>interbotix_gravity_compensation</depend>
  <depend>interbotix_xsarm_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
